--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,196 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;900&display=swap');/* You can add global styles to this file, and also import other style files */
+body {
+    margin-inline: 0;
+    padding: 0;
+    padding-right: 18px;
+    background:rgb(228, 232, 235);  
+    justify-content: center;
+    place-items: center;
+    font-family: poppins;
+    
+ }
+ select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    text-indent: 1px;
+    text-overflow: '';
+    border-top-style: hidden;
+    border-right-style: hidden;
+    border-left-style: hidden;
+    border-bottom-style: groove;
+    text-emphasis-color: groove;
+    padding:0px;
+    margin-bottom: 0px;
+    outline: none;
+    color:  rgb(133, 133, 133);
+    border-color:rgb(46, 43, 43);
+    border-width: 1px;
+    background: #BBC2CC;
+    padding:5px;
+    padding-left: 20px;
+    width:300px;
+    font-size:15px;
+    border-radius: 25px;
+    box-shadow: inset 4px 4px 4px #cbced1, inset -4px -4px 4px white;
+   
+  }
+  
+
+  input {
+      
+    border-top-style: hidden;
+    border-right-style: hidden;
+    border-left-style: hidden;
+    border-bottom-style: groove;
+    border-color:rgb(46, 43, 43);
+    border-width: 1px;
+    font-size: 50px;
+    cursor: not-allowed;
+  }
+  
+  .no-outline:focus {
+    outline: none;
+  }
+
+  input {
+    padding: 0px;
+    margin-bottom: 0px;
+    outline: none;
+
+  }
+
+
+
+.container {
+  position: relative;
+
+  border-radius: 25px;
+ 
+  box-sizing: border-box;
+  background: #ecf0f3;
+  box-shadow: 14px 14px 20px #cbced1, -14px -14px 20px white;
+}
+
+
+
+
+
+label, input, button {
+  display: block;
+  width: 100%;
+  padding: 0;
+  border: none;
+  outline: none;
+  box-sizing: border-box;
+  font-family: poppins;
+  font-size: 18px;
+  
+}
+
+
+
+input::placeholder {
+  color: rgb(169, 159, 159);
+}
+
+input {
+  background: #ffffff;
+  padding: 3px;
+  padding-left: 20px;
+  width:300px;
+
+  font-size:15px;
+  border-radius: 25px;
+  box-shadow: inset 4px 4px 4px #cbced1, inset -4px -4px 4px white;
+  
+}
+
+button {
+  margin-top:0px;
+  background: #d8e1e4;
+  width: 120px;
+  /* padding-top: 10px; */
+  height:42px;
+  border-radius:25px;
+  cursor: pointer;
+  font-weight: 900;
+  font-size:15px;
+  box-shadow: 4px 4px 4px #2c8099a1, -4px -4px 4px rgba(70, 123, 158, 0.623);
+  font-family: poppins;
+  border-radius: 25px;
+ 
+}
+
+button:hover {
+  box-shadow: none;
+  font-family: poppins;
+  border-radius: 25px;
+}
+
+.form-control {
+  background: #ecf0f3;
+  padding: 3px;
+  padding-left: 20px;
+  width:300px;
+  display: block;
+  box-sizing: border-box;
+  border: none;
+  outline: none;
+  box-sizing: border-box;
+  font-family: poppins;
+  font-size:18px;
+  border-radius:25px;
+  
+}
+label{
+    margin: 0%;
+}
+.form-label {
+  margin-bottom: 0rem;
+}
+.fixed-header, .fixed-footer{
+  position: fixed; 
+  width: 100%;  
+  background-color: rgba(255, 254, 254, 0.548); 
+ 
+  
+}
+.fixed-header{
+  top: 0;
+  position: fixed; 
+}
+.fixed-footer{
+  bottom: 0;
+}
+BODY{
+  font-size: 15PX;
+  padding-left: 350px;
+  padding-right: 350px;
+}
+
+.btn {
+  padding: 0.0rem 0.0rem;
+}
+
+:root {
+  --bs-body-line-height:1.3888;
+}
+
+
+p {
+  display: block;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+button{
+  padding: 20px;
+  border-radius: 10px;
+}
+
+_ngcontent-smu-c54{
+  border-radius: 10px;
+}
