--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -11,7 +11,7 @@
         <label for="name">Your name</label>
         <input type="text" class="form-control" name="name" [(ngModel)]="form.name" #name="ngModel" required />
         <div *ngIf="f.submitted && name.invalid">
-          <!-- <div *ngIf="name.errors.required">Name is required</div> -->
+          <div *ngIf="name.errors?.['required']">Name is required</div>
         </div>
       </div>
       <div class="form-group">
@@ -19,15 +19,15 @@
         <input type="text" class="form-control" name="username" [(ngModel)]="form.username" #username="ngModel"
           required />
         <div *ngIf="f.submitted && username.invalid">
-          <!-- <div *ngIf="username.errors.required">Username is required</div> -->
+          <div *ngIf="username.errors?.['required']">Username is required</div>
         </div>
       </div>
       <div class="form-group">
         <label for="email">Email</label>
         <input type="text" class="form-control" name="email" [(ngModel)]="form.email" #email="ngModel" required email />
         <div *ngIf="f.submitted && email.invalid">
-          <!-- <div *ngIf="email.errors.required">Email is required</div> -->
-          <!-- <div *ngIf="email.errors.email">Email must be a valid email address</div> -->
+          <div *ngIf="email.errors?.['required']">Email is required</div>
+          <div *ngIf="email.errors?.['email']">Email must be a valid email address</div>
         </div>
       </div>
       <div class="form-group">
@@ -35,12 +35,15 @@
         <input type="password" class="form-control" name="password" [(ngModel)]="form.password" #password="ngModel"
           required minlength="6" />
         <div *ngIf="f.submitted && password.invalid">
-          <!-- <div *ngIf="password.errors.required">Password is required</div> -->
-          <!-- <div *ngIf="password.errors.minlength">Password must be at least 6 characters</div> -->
+          <div *ngIf="password.errors?.['required']">Password is required</div>
+          <div *ngIf="password.errors?.['minlength']">Password must be at least 6 characters</div>
         </div>
       </div>
       <div class="form-group"  style="padding: 20px;">
         <button class="btn btn-primary">Register</button>
+        <!-- <div *ngIf="f.submitted && isSignedUp" class="alert alert">
+          Signup successful!<br/>
+        </div>  -->
         <div *ngIf="f.submitted && isSignUpFailed" class="alert alert-warning">
           Signup failed!<br/>{{errorMessage}}
         </div>
