--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,7 +11,7 @@
         <input type="text" class="form-control" name="username" [(ngModel)]="form.username" #username="ngModel"
           required />
         <div *ngIf="f.submitted && username.invalid">
-          <!-- <div *ngIf="username.errors.required">Username is required</div> -->
+          <div *ngIf="username.errors?.['required']">Username is required</div>
         </div>
       </div>
       <div class="form-group">
@@ -19,8 +19,8 @@
         <input type="password" class="form-control" name="password" [(ngModel)]="form.password" #password="ngModel"
           required minlength="6" />
         <div *ngIf="f.submitted && password.invalid">
-          <!-- <div *ngIf="password.errors.required">Password is required</div> -->
-          <!-- <div *ngIf="password.errors.minlength">Password must be at least 6 characters</div> -->
+          <div *ngIf="password.errors?.['required']">Password is required</div>
+          <div *ngIf="password.errors?.['minlength']">Password must be at least 6 characters</div>
         </div>
       </div>
       <div class="form-group" style="padding-top: 20px;">
