--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,7 @@
 <ng-template #loggedOut>
   Please login.
 
-  <!-- <table class="table mt-3" >
+  <table class="table mt-3" >
     <thead>
         <tr>
             <th scope="col"> ID</th>
@@ -33,5 +33,5 @@
     </tr>
 
     </tbody>
-</table> -->
+</table>
 </ng-template>
