--- a/src/styles.css
+++ b/src/styles.css
@@ -166,8 +166,11 @@ label{
 }
 BODY{
   font-size: 15PX;
-  padding-left: 350px;
-  padding-right: 350px;
+  width: 350px;
+  margin-left: auto;
+  margin-right: auto;
+  /* padding-left: 350px;
+  padding-right: 350px; */
 }
 
 .btn {
