--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -24,7 +24,7 @@
         </div>
       </div>
       <div class="form-group" style="padding-top: 20px;">
-        <button class="btn btn-primary" >Login</button>
+        <button class="btn btn-primary" >LOGIN</button>
         <div *ngIf="f.submitted && isLoginFailed" class="alert alert-danger">
           Login failed: {{errorMessage}}
         </div>
