--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -40,7 +40,7 @@
         </div>
       </div>
       <div class="form-group"  style="padding: 20px;">
-        <button class="btn btn-primary">Register</button>
+        <button class="btn btn-primary">REGISTER</button>
         <!-- <div *ngIf="f.submitted && isSignedUp" class="alert alert">
           Signup successful!<br/>
         </div>  -->
