--- a/src/styles.css
+++ b/src/styles.css
@@ -85,7 +85,7 @@ label, input, button {
   outline: none;
   box-sizing: border-box;
   font-family: poppins;
-  font-size: 18px;
+  font-size: small;
   
 }
 
@@ -116,7 +116,7 @@ button {
   border-radius:25px;
   cursor: pointer;
   font-weight: 900;
-  font-size:25px;
+  font-size:larger;
   box-shadow: 4px 4px 4px #2c8099a1, -4px -4px 4px rgba(70, 123, 158, 0.623);
   font-family: poppins;
   border-radius: 25px;
@@ -169,6 +169,7 @@ BODY{
   width: 350px;
   margin-left: auto;
   margin-right: auto;
+  padding-right: 0px;
   /* padding-left: 350px;
   padding-right: 350px; */
 }
@@ -191,10 +192,16 @@ p {
 }
 button{
   padding: 20px;
-  border-radius: 10px;
+  border-radius: 20px;
 }
 
 _ngcontent-smu-c54{
   border-radius: 10px;
   font-size: 18px;
+}
+th{
+  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: small;
+  padding: auto;
+  padding-top: 10px;
 }
