--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,11 +7,11 @@
     <img src=".././././../assets/download.png" style="opacity: 80%;">
     <form name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
       <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" class="form-control" name="username" [(ngModel)]="form.username" #username="ngModel"
+        <label for="usernameOrEmail">Username</label>
+        <input type="text" class="form-control" name="usernameOrEmail" [(ngModel)]="form.usernameOrEmail" #usernameOrEmail="ngModel"
           required />
-        <div *ngIf="f.submitted && username.invalid">
-          <div *ngIf="username.errors?.['required']">Username is required</div>
+        <div *ngIf="f.submitted && usernameOrEmail.invalid">
+          <div *ngIf="usernameOrEmail.errors?.['required']">Username is required</div>
         </div>
       </div>
       <div class="form-group">
@@ -25,6 +25,8 @@
       </div>
       <div class="form-group" style="padding-top: 20px;">
         <button class="btn btn-primary" >LOGIN</button>
+
+        <!-- <button class="btn btn-primary"  click="attemptAuth()">attemptAuth</button> -->
         <div *ngIf="f.submitted && isLoginFailed" class="alert alert-danger">
           Login failed: {{errorMessage}}
         </div>
