--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+<!-- 
 <div *ngIf="info.token; else loggedOut">
   <h5 class="text-primary">Your Information</h5>
   <p>
@@ -15,9 +16,6 @@
           <th scope="col">Title</th>
           <th scope="col">Description</th>
           <th scope="col">content</th>
-        
-
-          
       </tr>
   </thead>
   <tbody><tr *ngFor="let row of contentdata?.content">
@@ -25,15 +23,10 @@
       <td>{{row.title}}</td>
       <td>{{row.description}}</td>
       <td>{{row.content}}</td>
-
-     
-      <td>
-       
-      </td>
   </tr>
 
   </tbody>
-</table>
+</table> -->
 
 <!-- 
 
@@ -101,3 +94,41 @@
   
 
 </ng-template>
+
+<table width="100%">
+  <tr>
+    <td>
+      <div id="container" >  
+        <header role="banner">  
+            <h1>  
+                <a href="/">A. S. M. Radwan</a>  
+            </h1>  
+        </header>  
+        <nav>  
+            <ul>  
+                <!-- nav items -->  
+            </ul>  
+        </nav>  
+        <div id="blog" class="hidden"> This App is For ERA_InfoTech Ltd. ERA-InfoTech Ltd -A Joint Venture IT Company formed by Bank Asia Ltd, Ranks ITT Ltd of Bangladesh and Sash Tech SG Pte. Ltd, Singapore. ERA commenced it’s journey on 11th November, 2002.
+        </div>  
+        <!-- blog -->  
+        <article>  
+            <header>  
+                <h1>  
+                    <a href="">ERA Blog App Making</a>  
+                </h1>  
+                <div class="postmeta">  
+                    <time datetime="">January 17th, 2022 &nbsp; </time>  
+                    <a href="y#comments" class="comments"> 0 Comments</a>  
+                </div>  
+            </header>  
+            <!-- content -->  
+            <aside class="comments" id="comments">  
+                <!-- comments -->  
+            </aside>  
+            <!-- comments -->  
+        </article>  
+      </div>  
+    </td>
+    </tr>
+
