--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,5 @@
+<div class="container" align = center>
+
 <div *ngIf="isLoggedIn; else loggedOut">
   Logged in as {{roles}}.
 </div>
@@ -38,3 +40,5 @@
   </div >
   <p style="padding-bottom: 20px;"><br></p>
 </ng-template>
+
+</div>
