--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,3 +1,5 @@
+<div class="container" align = center>
+
 <div *ngIf="isSignedUp; else signupForm">
   Your registration is successful. Please login!
 </div>
@@ -8,7 +10,7 @@
       <div class="form-group">
       
         <img src=".././././../assets/download.png" style="opacity: 80%;">
-        <label for="name">Your name</label>
+        <label for="name">Your Name</label>
         <input type="text" class="form-control" name="name" [(ngModel)]="form.name" #name="ngModel" required />
         <div *ngIf="f.submitted && name.invalid">
           <div *ngIf="name.errors?.['required']">Name is required</div>
@@ -39,7 +41,7 @@
           <div *ngIf="password.errors?.['minlength']">Password must be at least 6 characters</div>
         </div>
       </div>
-      <div class="form-group"  style="padding: 20px;">
+      <div class="form-group"  style="padding-top: 20px;">
         <button class="btn btn-primary">REGISTER</button>
         <!-- <div *ngIf="f.submitted && isSignedUp" class="alert alert">
           Signup successful!<br/>
@@ -49,5 +51,11 @@
         </div>
       </div>
     </form>
-  </div>
+    <hr />
+    <p>Do You Have Any Account?</p>
+    <a href="/auth/login" class="btn btn-success" >Log In</a >
+  </div >
+  <p style="padding-bottom: 20px;"><br></p>
 </ng-template>
+
+</div>
