--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,7 +38,7 @@
   <div class="fixed-header" style=" left: 0; height: 70px;">
     <table width="100%" style="background-origin: border-box;">
         <tr  >
-          <td align="left"  >  <a href="home">  <img src=".././././../assets/logo.png" height="60px" style="padding-top: 10px; padding-left: 20px;">   </a>
+          <td align="left"  >  <a href="home">  <img src=".././././../assets/logo.png" height="60px" style="padding-top: 10px;  padding-left: 20px;">   </a>
           </td>
             
          
@@ -46,6 +46,7 @@
         </tr>
         <tr style="height:5px;">
             <td>   
+     
  <nav class="nav">
   <input class="nav__trigger-input" type="checkbox" id="trigger" aria-label="open the navigation"/>
   <label class="nav__trigger-finger" for="trigger">
@@ -60,7 +61,7 @@
       </a>
     </li>
     <li class="nav__item">
-      <a href="signup" class="nav__link">
+      <a href="auth/login" class="nav__link">
         <span class="nav__text">
         User Profile
         </span>
@@ -78,21 +79,21 @@
         <li class="nav__item">
           <a href="signup" class="nav__link">
             <span class="nav__text">
-              Sign Up Page
+             y Sign Up Page
             </span>
           </a>
         </li>
       </ul>
     </li>
     <li class="nav__item">
-      <a href="#hoi" class="nav__link">
+      <a href="signup" class="nav__link">
         <span class="nav__text">
-          Blog
+          New User?
         </span>
       </a>
     </li>
     <li class="nav__item">
-      <a href="#hoi" class="nav__link">
+      <a href="contact" class="nav__link">
         <span class="nav__text">
           Contact
         </span>
