--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -95,6 +95,7 @@
 
 </ng-template>
 
+
 <table width="100%">
   <tr>
     <td>
@@ -132,3 +133,4 @@
     </td>
     </tr>
 
+<button class="btn btn-secondary" (click)="logout()">Logout</button>
