--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,44 @@
 <div class="container" align = center>
 
 <div *ngIf="isLoggedIn; else loggedOut">
-  Logged in as {{roles}}.
+  Logged in as {{roles}}.  
+
+<table>
+  <div>
+    <body>
+
+      <div class="main-container">
+
+          <header class="block">
+              <ul class="header-menu horizontal-list">
+                  <li>
+                      <a class="header-menu-tab" href="#1"><span class="icon entypo-cog scnd-font-color"></span>Settings</a>
+                  </li>
+                  <li>
+                      <a class="header-menu-tab" href="#2"><span class="icon fontawesome-user scnd-font-color"></span>Account</a>
+                  </li>
+                  <li>
+                      <a class="header-menu-tab" href="#3"><span class="icon fontawesome-envelope scnd-font-color"></span>My Blogs</a>
+                  
+                  </li>
+                  <li>
+                      <a class="header-menu-tab" href="#5"><span class="icon fontawesome-star-empty scnd-font-color"></span>Favorites</a>
+                  </li>
+              </ul>
+              <div class="profile-menu">
+                  <p>Me <a href="#26"><span class="entypo-down-open scnd-font-color"></span></a></p>
+                  <div class="profile-picture small-profile-picture">
+                      <img width="40px" alt="Anne Hathaway picture" src="http://upload.wikimedia.org/wikipedia/commons/e/e1/Anne_Hathaway_Face.jpg">
+                  </div>
+              </div>
+          </header>
+
+           
+      </div> <!-- end main-container -->
+  </body>
+
+  </div>
+</table>
 </div>
 
 <ng-template #loggedOut>
