--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -21,9 +21,9 @@
                     <label >Message</label>
                     <textarea placeholder="" ></textarea>
                   </div>
-                  <div  style="padding: 10px;" >
-                    <a href="#" >Submit</a>
-                  
+                  <div  style="padding:20px;" >
+                    <!-- <a href="#" ></a> -->
+                    <button class="btn btn-secondary" >Submit</button>
                   </div>
 
            
