--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,42 +2,42 @@
 
 <div *ngIf="isLoggedIn; else loggedOut">
   Logged in as {{roles}}.  
-
+<br>
+<p style="font-family: poppins; font-size: 25px;">
+  A. S. M. Radwan
+</p>
 <table>
-  <div>
-    <body>
-
-      <div class="main-container">
-
-          <header class="block">
-              <ul class="header-menu horizontal-list">
-                  <li>
-                      <a class="header-menu-tab" href="#1"><span class="icon entypo-cog scnd-font-color"></span>Settings</a>
-                  </li>
-                  <li>
-                      <a class="header-menu-tab" href="#2"><span class="icon fontawesome-user scnd-font-color"></span>Account</a>
-                  </li>
-                  <li>
-                      <a class="header-menu-tab" href="#3"><span class="icon fontawesome-envelope scnd-font-color"></span>My Blogs</a>
+  <div align=center>
+ 
+       
+            <div class="profile-menu" align=center>
+             
+              <div class="profile-picture small-profile-picture">
+                  <img width="140px" src="./../../assets/user-icon-png-pnglogocom.png">
                   
-                  </li>
-                  <li>
-                      <a class="header-menu-tab" href="#5"><span class="icon fontawesome-star-empty scnd-font-color"></span>Favorites</a>
+              </div>
+              
+          </div>
+              <ul align=center>
+                  <li  style="display: inline;"  align=center>
+                      <a    href="#1"  style="display: inline;"  align=center><span class="icon entypo-cog scnd-font-color"  style="display: inline;"  align=center></span>Settings</a>
+                  </li> &nbsp;
+                  <li  style="display: inline;"  align=center>
+                      <a    href="#2"  style="display: inline;"  align=center><span class="icon fontawesome-user scnd-font-color"  style="display: inline;"  align=center></span>Account</a>
+                  </li > &nbsp;
+                  <li  style="display: inline;"  align=center>
+                      <a    href="#3"  style="display: inline;"  align=center><span class="icon fontawesome-envelope scnd-font-color"  style="display: inline;"  align=center></span>My Blogs</a>
+                  
+                  </li> &nbsp;
+                  <li  style="display: inline;"  align=center>
+                      <a    href="#5"  style="display: inline;"  align=center><span class="icon fontawesome-star-empty scnd-font-color"  style="display: inline;"  align=center></span>Favorites</a>
                   </li>
               </ul>
-              <div class="profile-menu">
-                  <p>Me <a href="#26"><span class="entypo-down-open scnd-font-color"></span></a></p>
-                  <div class="profile-picture small-profile-picture">
-                      <img width="40px" alt="Anne Hathaway picture" src="http://upload.wikimedia.org/wikipedia/commons/e/e1/Anne_Hathaway_Face.jpg">
-                  </div>
-              </div>
-          </header>
+        
 
            
       </div> <!-- end main-container -->
-  </body>
-
-  </div>
+ 
 </table>
 </div>
 
