--- a/src/styles.css
+++ b/src/styles.css
@@ -172,7 +172,7 @@ label{
 }
 BODY{
   font-size: 15PX;
-  width: 350px;
+  width: 380px;
   margin-left: auto;
   margin-right: auto;
   padding-right: 0px;
@@ -336,3 +336,8 @@ html {
     margin-left: -0.5em;
   }
 } */
+
+ul {
+
+  padding-inline-start: 0px;
+}
